# MicDSP-ESP32

./: LICENSE  README.md
UI/: GUI.py  requirements.txt
main/: CMakeLists.txt  config.h  idf_component.yml  main.c
main/audio_io/: i2s_manager.h
main/control/: uart_interface.c  uart_interface.h
main/dsp/: compressor.c  compressor.h  expander.c  expander.h  fft.c  fft.h  iir_filter.c  iir_filter.h  limiter.c  limiter.h  rms.c  rms.h
